--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#795548" />
+    <meta name="theme-color" content="#6fa83a" />
     <meta
       name="description"
       content="Sensor hub for my IoT playground"
